Reformulação do README

--- a/api.ipynb
+++ b/api.ipynb
@@ -19,12 +19,11 @@
     "import pprint #para organizar o print\n",
     "link = \"https://servicodados.ibge.gov.br/api/v3/agregados/4112/periodos/2006/variaveis/2586?localidades=N1[all]\"\n",
     "\n",
-    "#Fazendo a requisição no IBGE (metodo get)\n",
+    "#A requisição é feita com requests.get() e os dados são convertidos para JSON:\n",
     "requisicao = requests.get(link)\n",
-    "#As informações vem em formato JSON\n",
     "informacoes = requisicao.json()\n",
     "\n",
-    "#Lista com dicionario dentro\n",
+    "#Impressão de dados formatados:\n",
     "pprint.pprint(informacoes[0])#variavel - Número de estabelecimentos\n",
     "item_busca = informacoes[0]['variavel']\n",
     "\n",
